# Comsoft_test

./: .dockerignore  .envexample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py
mail_app/: admin.py  apps.py  consumers.py  models.py  routing.py  urls.py  views.py
mail_app/api/: serializers.py  views.py
mail_app/management/commands/: fetch_emails.py
mail_app/migrations/: 0001_initial.py  0002_emailaccount_highest_uid.py  0003_remove_emailaccount_highest_uid.py
mail_app/utils/: email_service.py  email_utils.py
static/mail_app/js/: email_list.js
templates/mail_app/: email_list.html
