[tool.poetry]
name = "comsoft-test"
version = "0.1.0"
description = "Application for comsoft"
authors = ["shironoir <vlaxeeh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.2"
djangorestframework = "^3.15.2"
daphne = "^4.1.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
